[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/assets/final/Speechbubble1.png" type="Texture" id=1]
[ext_resource path="res://src/assets/final/Speechbubble2.png" type="Texture" id=2]
[ext_resource path="res://src/Screens/Game/Talk.gd" type="Script" id=3]
[ext_resource path="res://src/assets/fonts/Work-Sans/variable/WorkSans-Roman-VF.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[node name="Talk" type="Node2D"]
script = ExtResource( 3 )

[node name="Talkbox" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Talkbox"]
position = Vector2( 1473.46, 870.629 )
scale = Vector2( 1, 0.580885 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Talkbox"]
visible = false
position = Vector2( 1428.25, 234.44 )
texture = ExtResource( 2 )

[node name="TalkInstruct" type="Node2D" parent="."]
visible = false

[node name="Sprite2" type="Sprite" parent="TalkInstruct"]
position = Vector2( 1448.5, 174.726 )
scale = Vector2( 1.06429, 0.673693 )
texture = ExtResource( 2 )

[node name="Instruct" type="RichTextLabel" parent="TalkInstruct"]
margin_left = 1223.94
margin_top = 119.799
margin_right = 1645.94
margin_bottom = 221.799
custom_fonts/normal_font = SubResource( 1 )
text = "Use your memory. Which shapes did you see?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkText" type="Node2D" parent="."]

[node name="Annoyed" type="RichTextLabel" parent="TalkText"]
visible = false
margin_left = 1233.0
margin_top = 812.0
margin_right = 1655.0
margin_bottom = 914.0
custom_fonts/normal_font = SubResource( 1 )
text = "WHat!!!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Correct" type="RichTextLabel" parent="TalkText"]
visible = false
margin_left = 1233.0
margin_top = 812.0
margin_right = 1655.0
margin_bottom = 914.0
custom_fonts/normal_font = SubResource( 1 )
text = "Interesting..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong" type="RichTextLabel" parent="TalkText"]
visible = false
margin_left = 1233.0
margin_top = 812.0
margin_right = 1655.0
margin_bottom = 914.0
custom_fonts/normal_font = SubResource( 1 )
text = "Focus... use  your mind... >_<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Over" type="RichTextLabel" parent="TalkText"]
visible = false
margin_left = 1233.0
margin_top = 812.0
margin_right = 1655.0
margin_bottom = 914.0
custom_fonts/normal_font = SubResource( 1 )
text = "I believed in you! On your way to recovery!!
;-))))"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkTimer" type="Timer" parent="."]
